fixed x overflow

--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -70,6 +70,7 @@ body {
     left:5%;
     font-size:2rem;
     line-height:2;
+    max-width: 95%;
     
 }
 
